# rustyx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: DEPLOYMENT.md  INSTALLATION.md  MIDDLEWARE.md  QUICKSTART.md  UPLOAD.md
examples/basic_api/: main.rs
examples/file_upload/: main.rs
src/: app.rs  error.rs  lib.rs  main.rs  middleware.rs  request.rs  response.rs  router.rs  static_files.rs  upload.rs  websocket.rs
src/controllers/: mod.rs
src/db/: connection.rs  mod.rs  mongodb.rs  pool.rs  query.rs  sql.rs
src/middleware/: rate_limit.rs
src/models/: mod.rs
src/routes/: mod.rs
src/utils/: mod.rs
